--- a/DUOLPhysics/DUOLPhysics.vcxproj.filters
+++ b/DUOLPhysics/DUOLPhysics.vcxproj.filters
@@ -150,10 +150,16 @@
     <ClInclude Include="include\DUOLPhysics\PhysicsScene.h" />
     <ClInclude Include="include\DUOLPhysics\PhysicsMaterial.h" />
     <ClInclude Include="include\DUOLPhysics\PhysicsDescriptions.h" />
+    <ClInclude Include="include\DUOLPhysics\PhysicsPlane.h" />
+    <ClInclude Include="include\DUOLPhysics\Actor\PhysicsActorBase.h" />
+    <ClInclude Include="include\DUOLPhysics\Shapes\PhysicsShapeBase.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DUOLPhysics\PhysicsSystem.cpp" />
     <ClCompile Include="src\DUOLPhysics\PhysicsScene.cpp" />
     <ClCompile Include="src\DUOLPhysics\PhysicsMaterial.cpp" />
+    <ClCompile Include="src\DUOLPhysics\PhysicsPlane.cpp" />
+    <ClCompile Include="src\DUOLPhysics\Actor\PhysicsActorBase.cpp" />
+    <ClCompile Include="src\DUOLPhysics\Shapes\PhysicsShapeBase.cpp" />
   </ItemGroup>
 </Project>
