--- a/DUOLPhysics/DUOLPhysics.vcxproj
+++ b/DUOLPhysics/DUOLPhysics.vcxproj
@@ -305,20 +305,30 @@
     <ClInclude Include="include\DUOLPhysics\PhysX\vehicle\PxVehicleUtilSetup.h" />
     <ClInclude Include="include\DUOLPhysics\PhysX\vehicle\PxVehicleUtilTelemetry.h" />
     <ClInclude Include="include\DUOLPhysics\PhysX\vehicle\PxVehicleWheels.h" />
-    <ClInclude Include="include\DUOLPhysics\PhysicsSystem.h" />
-    <ClInclude Include="include\DUOLPhysics\PhysicsScene.h" />
+    <ClInclude Include="include\DUOLPhysics\System\PhysicsSystem.h" />
+    <ClInclude Include="include\DUOLPhysics\Scene\PhysicsScene.h" />
     <ClInclude Include="include\DUOLPhysics\PhysicsMaterial.h" />
-    <ClInclude Include="include\DUOLPhysics\PhysicsPlane.h" />
+    <ClInclude Include="include\DUOLPhysics\Shapes\PhysicsPlane.h" />
     <ClInclude Include="include\DUOLPhysics\Actor\PhysicsActorBase.h" />
     <ClInclude Include="include\DUOLPhysics\Shapes\PhysicsShapeBase.h" />
+    <ClInclude Include="include\DUOLPhysics\Shapes\PhysicsBox.h" />
+    <ClInclude Include="include\DUOLPhysics\Actor\PhysicsDynamicActor.h" />
+    <ClInclude Include="src\DUOLPhysics\PhysicsMaterialImpl.h" />
+    <ClInclude Include="src\DUOLPhysics\Scene\PhysicsSceneImpl.h" />
+    <ClInclude Include="src\DUOLPhysics\System\PhysicsSystemImpl.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLPhysics\PhysicsMaterialImpl.cpp" />
+    <ClCompile Include="src\DUOLPhysics\Scene\PhysicsSceneImpl.cpp" />
+    <ClCompile Include="src\DUOLPhysics\System\PhysicsSystemImpl.cpp" />
+    <ClCompile Include="src\DUOLPhysics\Shapes\PhysicsBox.cpp" />
+    <ClCompile Include="src\DUOLPhysics\Actor\PhysicsDynamicActor.cpp" />
     <ClCompile Include="src\DUOLPhysics\Shapes\PhysicsShapeBase.cpp" />
     <ClCompile Include="src\DUOLPhysics\Actor\PhysicsActorBase.cpp" />
-    <ClCompile Include="src\DUOLPhysics\PhysicsPlane.cpp" />
+    <ClCompile Include="src\DUOLPhysics\Shapes\PhysicsPlane.cpp" />
     <ClCompile Include="src\DUOLPhysics\PhysicsMaterial.cpp" />
-    <ClCompile Include="src\DUOLPhysics\PhysicsScene.cpp" />
-    <ClCompile Include="src\DUOLPhysics\PhysicsSystem.cpp" />
+    <ClCompile Include="src\DUOLPhysics\Scene\PhysicsScene.cpp" />
+    <ClCompile Include="src\DUOLPhysics\System\PhysicsSystem.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
