--- a/DUOLGameEngine/DUOLGameEngine.vcxproj
+++ b/DUOLGameEngine/DUOLGameEngine.vcxproj
@@ -191,7 +191,8 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="include\DUOLGameEngine\Util\Coroutine.h" />
+    <ClInclude Include="include\DUOLGameEngine\Util\Coroutine\CoroutineHandler.h" />
+    <ClInclude Include="include\DUOLGameEngine\Util\Coroutine\Coroutine.h" />
     <ClInclude Include="include\DUOLGameEngine\StateMachine\BehaviorTree\BlackBoard.h" />
     <ClInclude Include="include\DUOLGameEngine\StateMachine\BehaviorTree\Nodes\AlwaysFailureNode.h" />
     <ClInclude Include="include\DUOLGameEngine\StateMachine\BehaviorTree\Nodes\AlwaysSuccessNode.h" />
@@ -222,9 +223,13 @@
     <ClInclude Include="include\DUOLGameEngine\Manager\SceneManagement\SceneManager.h" />
     <ClInclude Include="include\DUOLGameEngine\Manager\SceneManagement\Scene.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\RendererBase.h" />
+    <ClInclude Include="include\DUOLGameEngine\Util\Coroutine\YieldInstructionBase.h" />
+    <ClInclude Include="include\DUOLGameEngine\Util\Coroutine\WaitForSeconds.h" />
+    <ClInclude Include="include\DUOLGameEngine\Util\Coroutine\WaitForSecondsRealtime.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\DUOLGameEngine\Util\Coroutine.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Util\Coroutine\CoroutineHandler.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Util\Coroutine\Coroutine.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\RendererBase.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Manager\SceneManagement\Scene.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Manager\SceneManagement\SceneManager.cpp" />
@@ -236,7 +241,7 @@
     <ClCompile Include="src\DUOLGameEngine\StateMachine\BehaviorTree\Nodes\InverterNode.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Manager\GraphicsManager.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Manager\InputManager.cpp" />
-    <ClCompile Include="src\Engine.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Engine.cpp" />
     <ClCompile Include="src\DUOLGameEngine\StateMachine\BehaviorTree\BehaviorTree.cpp" />
     <ClCompile Include="src\DUOLGameEngine\StateMachine\BehaviorTree\Nodes\DecoratorNode.cpp" />
     <ClCompile Include="src\DUOLGameEngine\StateMachine\BehaviorTree\Nodes\ControlNode.cpp" />
@@ -251,6 +256,9 @@
     <ClCompile Include="src\DUOLGameEngine\StateMachine\BehaviorTree\SubTree.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Util\UUID.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Manager\TimeManager.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Util\Coroutine\YieldInstructionBase.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Util\Coroutine\WaitForSeconds.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Util\Coroutine\WaitForSecondsRealtime.cpp" />
     <ClInclude Include="include\DUOLGameEngine\StateMachine\BehaviorTree\Nodes\ConditionNode.h" />
     <ClInclude Include="include\DUOLGameEngine\StateMachine\BehaviorTree\Nodes\ActionNode.h" />
     <ClInclude Include="include\DUOLGameEngine\Event\EventSystem.h" />
