그래픽스라이브러리를 통한 게임엔진, 리소스 매니저 제작중
방황..중입니다..

--- a/DUOLGeometry/DUOLGeometry.vcxproj
+++ b/DUOLGeometry/DUOLGeometry.vcxproj
@@ -158,9 +158,11 @@
   <ItemGroup>
     <ClInclude Include="framework.h" />
     <ClInclude Include="include\DUOLGeometry\GeometryEngine.h" />
+    <ClInclude Include="MemoryPool.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="MemoryPool.cpp" />
     <ClCompile Include="src\DUOLGeometry\GeometryEngine.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
