--- a/DUOLGraphicsLibrary/DUOLGraphicsLibrary.vcxproj.filters
+++ b/DUOLGraphicsLibrary/DUOLGraphicsLibrary.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClInclude Include="include\DUOLGraphicsLibrary\RenderPassFlags.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="include\DUOLGraphicsLibrary\Renderer\ResourceViewLayout.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -150,6 +153,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="src\DUOLGraphicsLibrary\Renderer\RenderPass.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="src\DUOLGraphicsLibrary\Renderer\ResourceViewLayout.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
