--- a/DUOLPhysics/DUOLPhysics.vcxproj
+++ b/DUOLPhysics/DUOLPhysics.vcxproj
@@ -313,12 +313,16 @@
     <ClInclude Include="include\DUOLPhysics\Shapes\PhysicsShapeBase.h" />
     <ClInclude Include="include\DUOLPhysics\Shapes\PhysicsBox.h" />
     <ClInclude Include="include\DUOLPhysics\Actor\PhysicsDynamicActor.h" />
+    <ClInclude Include="src\DUOLPhysics\Shapes\PhysicsBoxImpl.h" />
     <ClInclude Include="src\DUOLPhysics\Shapes\PhysicsPlaneImpl.h" />
     <ClInclude Include="src\DUOLPhysics\PhysicsMaterialImpl.h" />
     <ClInclude Include="src\DUOLPhysics\Scene\PhysicsSceneImpl.h" />
     <ClInclude Include="src\DUOLPhysics\System\PhysicsSystemImpl.h" />
+    <ClInclude Include="src\DUOLPhysics\PhysicsTypeConverter.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLPhysics\PhysicsTypeConverter.cpp" />
+    <ClCompile Include="src\DUOLPhysics\Shapes\PhysicsBoxImpl.cpp" />
     <ClCompile Include="src\DUOLPhysics\Shapes\PhysicsPlaneImpl.cpp" />
     <ClCompile Include="src\DUOLPhysics\PhysicsMaterialImpl.cpp" />
     <ClCompile Include="src\DUOLPhysics\Scene\PhysicsSceneImpl.cpp" />
