--- a/DUOLPhysics/DUOLPhysics.vcxproj.filters
+++ b/DUOLPhysics/DUOLPhysics.vcxproj.filters
@@ -159,6 +159,8 @@
     <ClInclude Include="src\DUOLPhysics\Scene\PhysicsSceneImpl.h" />
     <ClInclude Include="src\DUOLPhysics\PhysicsMaterialImpl.h" />
     <ClInclude Include="src\DUOLPhysics\Shapes\PhysicsPlaneImpl.h" />
+    <ClInclude Include="src\DUOLPhysics\Shapes\PhysicsBoxImpl.h" />
+    <ClInclude Include="src\DUOLPhysics\PhysicsTypeConverter.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DUOLPhysics\System\PhysicsSystem.cpp" />
@@ -173,5 +175,7 @@
     <ClCompile Include="src\DUOLPhysics\Scene\PhysicsSceneImpl.cpp" />
     <ClCompile Include="src\DUOLPhysics\PhysicsMaterialImpl.cpp" />
     <ClCompile Include="src\DUOLPhysics\Shapes\PhysicsPlaneImpl.cpp" />
+    <ClCompile Include="src\DUOLPhysics\Shapes\PhysicsBoxImpl.cpp" />
+    <ClCompile Include="src\DUOLPhysics\PhysicsTypeConverter.cpp" />
   </ItemGroup>
 </Project>
