--- a/DUOLGame/DUOLGame.vcxproj.filters
+++ b/DUOLGame/DUOLGame.vcxproj.filters
@@ -21,9 +21,21 @@
     <ClCompile Include="src\DUOLGame\Application.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="src\DUOLGame\TestScenes\CometTestScene.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="src\DUOLGame\TestScripts\CoroutineLogTest.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\DUOLGame\Application.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\DUOLGame\TestScenes\CometTestScene.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\DUOLGame\TestScripts\CoroutineLogTest.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
