--- a/DUOLGameEngine/DUOLGameEngine.vcxproj
+++ b/DUOLGameEngine/DUOLGameEngine.vcxproj
@@ -226,8 +226,10 @@
     <ClInclude Include="include\DUOLGameEngine\Util\Coroutine\YieldInstructionBase.h" />
     <ClInclude Include="include\DUOLGameEngine\Util\Coroutine\WaitForSeconds.h" />
     <ClInclude Include="include\DUOLGameEngine\Util\Coroutine\WaitForSecondsRealtime.h" />
+    <ClInclude Include="include\DUOLGameEngine\Manager\ResourceManager.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLGameEngine\Manager\ResourceManager.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Util\Coroutine\CoroutineHandler.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Util\Coroutine\Coroutine.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\RendererBase.cpp" />
