--- a/DUOLFbxImporter/DUOLFbxImporter/DUOLFbxImporter.vcxproj.filters
+++ b/DUOLFbxImporter/DUOLFbxImporter/DUOLFbxImporter.vcxproj.filters
@@ -15,13 +15,28 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="framework.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="dllmain.cpp">
+    <ClCompile Include="src\DUOLFbxImporter\DllMain\dllmain.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="src\DUOLFbxImporter\DUOLFBXParser\DUOLFBXParser.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="src\DUOLFbxImporter\ParserBase\DUOLParserBase.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="include\DUOLFbxImporter\FBXParserDLL\FBXParserDLL.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="include\DUOLFbxImporter\DUOLFBXParser\DUOLFBXParser.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="include\DUOLFbxImporter\DUOLFBXParser\DUOLFBXData.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="include\DUOLFbxImporter\ParserBase\DUOLParserBase.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
